app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  selector:
    matchLabels:
      app: app
  replicas: 1
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          command: [ "gotty" ]
          args: [ "--port", "50001", "--permit-write", "--title-format", "AutoGPT Terminal", "bash", "-c", "python -m autogpt" ]
          resources: { }
          tty: true
          image: registry.digitalocean.com/torben-it-registry/autogpt
      restartPolicy: Always
      terminationGracePeriodSeconds: 60
status: {}
