autogpt-docker-kubernetes-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: autogpt-docker-kubernetes-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/autogpt-docker-kubernetes-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/autogpt-docker-kubernetes-default: "true"
